@@ -29,7 +29,6 @@ import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -288,8 +287,8 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
 
     cluster.waitForActiveCollection(collectionName, 2, 4);
 
-    String nodeName = (String) response._get("success[0]/key", null);
-    String corename = (String) response._get(asList("success", nodeName, "core"), null);
+    String nodeName = response._getStr("success[0]/key");
+    String corename = response._getStr(asList("success", nodeName, "core"), null);
 
     try (SolrClient coreClient =
         getHttpSolrClient(cluster.getZkStateReader().getBaseUrlForNodeName(nodeName))) {
@@ -450,7 +449,7 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     Replica replica1 = testCollection.getReplicas().iterator().next();
     final var coreStatus = getCoreStatus(replica1);
 
-    assertEquals(Paths.get(coreStatus.dataDir).toString(), dataDir.toString());
+    assertEquals(Path.of(coreStatus.dataDir).toString(), dataDir.toString());
   }
 
   @Test
@@ -621,19 +620,23 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     CollectionAdminResponse rsp = req.process(cluster.getSolrClient());
     assertEquals(0, rsp.getStatus());
     assertNotNull(rsp.getResponse().get(collectionName));
-    assertNotNull(rsp.getResponse().findRecursive(collectionName, "properties"));
+    assertNotNull(rsp.getResponse()._get(List.of(collectionName, "properties"), null));
     final var collPropMap =
-        (Map<String, Object>) rsp.getResponse().findRecursive(collectionName, "properties");
+        (Map<String, Object>) rsp.getResponse()._get(List.of(collectionName, "properties"), null);
     assertEquals("conf2", collPropMap.get("configName"));
     assertEquals(2L, collPropMap.get("nrtReplicas"));
     assertEquals("0", collPropMap.get("tlogReplicas"));
     assertEquals("0", collPropMap.get("pullReplicas"));
     assertEquals(
-        2, ((NamedList<Object>) rsp.getResponse().findRecursive(collectionName, "shards")).size());
-    assertNotNull(rsp.getResponse().findRecursive(collectionName, "shards", "shard1", "leader"));
+        2,
+        ((NamedList<Object>) rsp.getResponse()._get(List.of(collectionName, "shards"), null))
+            .size());
+    assertNotNull(
+        rsp.getResponse()._get(List.of(collectionName, "shards", "shard1", "leader"), null));
     // Ensure more advanced info is not returned
     assertNull(
-        rsp.getResponse().findRecursive(collectionName, "shards", "shard1", "leader", "segInfos"));
+        rsp.getResponse()
+            ._get(List.of(collectionName, "shards", "shard1", "leader", "segInfos"), null));
 
     // Returns segment metadata iff requested
     req = CollectionAdminRequest.collectionStatus(collectionName);
@@ -690,7 +693,7 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     assertEquals(0, rsp.getStatus());
     @SuppressWarnings({"unchecked"})
     List<Object> nonCompliant =
-        (List<Object>) rsp.getResponse().findRecursive(collectionName, "schemaNonCompliant");
+        (List<Object>) rsp.getResponse()._get(List.of(collectionName, "schemaNonCompliant"), null);
     assertEquals(nonCompliant.toString(), 1, nonCompliant.size());
     assertTrue(nonCompliant.toString(), nonCompliant.contains("(NONE)"));
     @SuppressWarnings({"unchecked"})
@@ -798,9 +801,7 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     indexSomeDocs(simpleCollName);
 
     final var simpleResponse =
-        new CollectionsApi.GetCollectionStatus(simpleCollName)
-            .process(cluster.getSolrClient())
-            .getParsed();
+        new CollectionsApi.GetCollectionStatus(simpleCollName).process(cluster.getSolrClient());
     assertEquals(simpleCollName, simpleResponse.name);
     assertEquals(2, simpleResponse.shards.size());
     assertEquals(Integer.valueOf(2), simpleResponse.activeShards);
@@ -815,7 +816,7 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     // Ensure segment data present when request sets 'segments=true' flag
     final var segmentDataRequest = new CollectionsApi.GetCollectionStatus(simpleCollName);
     segmentDataRequest.setSegments(true);
-    final var segmentDataResponse = segmentDataRequest.process(cluster.getSolrClient()).getParsed();
+    final var segmentDataResponse = segmentDataRequest.process(cluster.getSolrClient());
     var segmentData = segmentDataResponse.shards.get("shard1").leader.segInfos;
     assertNotNull(segmentData);
     assertTrue(segmentData.info.numSegments > 0); // Expect at least one segment
@@ -828,8 +829,7 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     // Ensure file-size data present when request sets sizeInfo flag
     final var segmentFileSizeRequest = new CollectionsApi.GetCollectionStatus(simpleCollName);
     segmentFileSizeRequest.setSizeInfo(true);
-    final var segmentFileSizeResponse =
-        segmentFileSizeRequest.process(cluster.getSolrClient()).getParsed();
+    final var segmentFileSizeResponse = segmentFileSizeRequest.process(cluster.getSolrClient());
     segmentData = segmentFileSizeResponse.shards.get("shard1").leader.segInfos;
     assertNotNull(segmentData);
     final var largeFileList = segmentData.segments.get("_0").largestFilesByName;
@@ -1373,7 +1373,7 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     assertEquals(0, response.getStatus());
 
     NamedList<?> colStatus = (NamedList<?>) response.getResponse().get(collectionName);
-    Long creationTimeMillis = (Long) colStatus._get("creationTimeMillis", null);
+    Long creationTimeMillis = (Long) colStatus._get("creationTimeMillis");
     assertNotNull("creationTimeMillis was not included in COLSTATUS response", creationTimeMillis);
 
     Instant creationTime = Instant.ofEpochMilli(creationTimeMillis);
